static/style.css
body {
	font-family: 'Montserrat', sans-serif;
	background: #662d91; /* fallback for old browsers */
	background: -webkit-linear-gradient(to left, #2E3192 , #662d91); /* Chrome 10-25, Safari 5.1-6 */
	background: linear-gradient(to left, #2E3192 , #662d91); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

.container {
    padding: 16px;
}

h1 {
	color: white;
}

h2 {
	color: #D3D3D3;
}

p {
	color: #D3D3D3;
}

ul {
	opacity: .4;
}

#login {
	width: 100%; height: 60%; margin-top: 40px; padding: 40px;
	background-color: #FFF;
}

#app {
	width: 100%; height: 60%; margin-top: 40px;
	background-color: #FFF;
	box-shadow: 0 0 30px black;
}

.brand {
	color: #662D91;
}

.btnSignUp {
	color: #FFF; background-color: #662D91;
}

.btnLogin {
	color: #FFF; background-color: #2E3192;
}

.btnEdit {
	color: #662D91; background-color: white;
	width: 90%;
}

.btnStop {
	color: #662D91; background-color: white; width: 90%;
}

.btn {
	margin: 8px;
}
 
.btn:hover {
	color: #D3D3D3;
}

.form-control {
	padding: 10px;
	margin: 10px;
}

.error {
	color: #f4424e;
	text-align: center;
}

